@@ -1,0 +1,3 @@
+EXTRA_DIST = \
+	zoomin.xpm \
+	zoomout.xpm
