@@ -1,0 +1,6 @@
+<!DOCTYPE RCC><RCC version="1.0">
+<qresource>
+    <file>images/zoomin.xpm</file>
+    <file>images/zoomout.xpm</file>
+</qresource>
+</RCC>
