@@ -1,4 +1,6 @@
 Changes for 1.3.10
+   Fix zoom icons when compiled with newer Qt (worked on Qt 5.3 but not 5.10+)
+      (use Qt 4+ resource system instead of embedding image in .ui files)
    Print stdout/stderr to Windows command prompt
    Create window as maximized if it fills the available screen space
    Load md3 player skins with upper case extension (.SKIN)
